@startuml
skinparam classAttributeIconSize 0
hide circle
title ListAllTreatmentsCommand Class Diagram

' =====================
' Classes
' =====================

interface "<<interface>>\nCommand" as Command {
    + exec(args : String) : void
}

class ListAllTreatmentsCommand {
    - {static} LOGGER : Logger
    + ListAllTreatmentsCommand(pets : PetList)
    + exec(args : String) : void
}

class PetList {
    + stream() : Stream<Pet>
    + size() : int
    + get(index : int) : Pet
}

class Pet {
    - name : String
    - treatments : ArrayList<Treatment>
    + getName() : String
    + getTreatments() : ArrayList<Treatment>
}

class Treatment {
    - type : String
    - date : LocalDate
    - note : String
    - isCompleted : boolean
    + getType() : String
    + getDate() : LocalDate
    + isCompleted() : boolean
    + toString() : String
}

class Ui {
    + printHeader(header : String) : void
    + printList(list : ArrayList<T>) : void
}

' =====================
' Relationships
' =====================

ListAllTreatmentsCommand .|> Command
ListAllTreatmentsCommand --> PetList
ListAllTreatmentsCommand ..> Ui
PetList "1" *-- "*" Pet : contains >
Pet "1" *-- "*" Treatment : has >
@enduml